Designed Species Class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Genetics)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Genetics main.cpp)
+add_executable(Genetics main.cpp Species.cpp Species.h)
